Using JAXB to generate Java classes. Also tests for Running JAXB Generated classes in Spring Boot Application.